# min_circle

./: .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  22requirements.txt  LICENSE  Makefile  README.md  Taskfile.yml  pyproject.toml  pytest.ini  renovate.json  requirements.txt
.devcontainer/: startup.sh
.github/: renovate.json
.github/scripts/: marimushka.sh
.github/taskfiles/: docs.yml
.github/workflows/: book.yml  ci.yml  marimo.yml  pre-commit.yml  release.yml  sync.yml
.rhiza/: history  template.yml
book/: _config.yml  _toc.yml
book/marimo/: demo.py
book/marimo/notebooks/: demo.py
book/marimo/solver/: hexaly.py  mosek.py  welzl.py
book/marimo/solver/utils/: circle.py
notebooks/: minimal enclosing circle.py  minimal.py
notebooks/solver/: cvx.py  hexaly.py  mosek.py  welzl.py
notebooks/solver/utils/: circle.py  cloud.py  figure.py
src/min_circle/: __init__.py  cvx.py  hexaly.py  msk.py  welzl.py
src/min_circle/utils/: __init__.py  circle.py  cloud.py  figure.py
src/tests/: conftest.py  test_clarabel.py  test_welzl.py
tests/: __init__.py  conftest.py  test_clarabel.py  test_taskfile.py  test_welzl.py  tests.mk
tests/test_min_circle/: __init__.py  conftest.py  test_cvx.py  test_msk.py  test_welzl.py
tests/test_rhiza/: __init__.py  test_rhiza_workflows.py
