[project]
name = "min_circle"
version = "0.0.1"
description = "Compute the minimal enclosing circle for a set of points in m-dimensional space"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.3.5",
    "cvxpy-base>=1.7.5",
    "plotly>=6.5.0",
]

[project.urls]
repository = "https://github.com/tschm/min_circle"

[project.optional-dependencies]
dev = [
    "pytest-cov==7.0.0",
    "pytest==9.0.1",
    "pre-commit==4.5.0",
    "marimo>=0.18.3"
]

solvers = [
    "clarabel>=0.11.1",
    "mosek>=11.0.30"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel"]

[tool.hatch.build.targets.wheel]
packages = ["src/min_circle"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.package_module_name_map]
cvxpy-base = ["cvxpy"]
