[project]
name = "min_circle"
version = "0.0.1"
description = "Compute the minimal enclosing circle for a set of points in m-dimensional space"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.3.5",
    "cvxpy-base>=1.7.5",
    "plotly>=6.5.0",
]

[project.urls]
repository = "https://github.com/tschm/min_circle"

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "pandas>=2.3"
]

[project.optional-dependencies]
solvers = [
    "clarabel>=0.11.1",
    "mosek>=11.0.30"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel"]

[tool.hatch.build.targets.wheel]
packages = ["src/min_circle"]

[tool.deptry.package_module_name_map]
cvxpy-base = ["cvxpy"]

