[project]
name = "min_circle"
version = "1.0.0"
description = "Compute the minimal enclosing circle for a set of points in m-dimensional space"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.3.5",
    "cvxpy-base>=1.7.5",
    "plotly>=6.5.0",
]

[project.urls]
repository = "https://github.com/tschm/min_circle"

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "pandas>=2.3"
]

[project.optional-dependencies]
solvers = [
    "clarabel>=0.11.1",
    "mosek>=11.0.30"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel"]

[tool.hatch.build.targets.wheel]
packages = ["src/min_circle"]

[tool.deptry.package_module_name_map]
cvxpy-base = ["cvxpy"]
numpy = ["numpy"]
plotly = ["plotly"]
clarabel = ["clarabel"]
mosek = ["mosek"]
marimo = ["marimo"]
pandas = ["pandas"]

[tool.mypy]
ignore_missing_imports = true

